--- a/AutomationISE/packages.config
+++ b/AutomationISE/packages.config
@@ -4,11 +4,12 @@
   <package id="Microsoft.Azure.Common" version="2.1.0" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Azure.Management.Automation" version="0.50.1-prerelease" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Azure.Management.Resources" version="2.18.2-preview" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.CSharp" version="4.0.0-beta-22816" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.4.206191646-alpha" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.16.204221202" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.WindowsAzure.Common" version="1.3.0" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.WindowsAzure.Common.Dependencies" version="1.1.0" targetFramework="net45" userInstalled="true" />
