Added latest ISE Add-On dlls

--- a/AzureAutomationAuthoringToolkit/ISEaddon/AzureAutomation.dll.config
+++ b/AzureAutomationAuthoringToolkit/ISEaddon/AzureAutomation.dll.config
@@ -8,10 +8,10 @@
     <userSettings>
         <AzureAutomation.Properties.Settings>
             <setting name="ADUserName" serializeAs="String">
-                <value>user@contoso.onmicrosoft.com</value>
+                <value />
             </setting>
             <setting name="LocalDirectory" serializeAs="String">
-                <value>c:\</value>
+                <value />
             </setting>
         </AzureAutomation.Properties.Settings>
     </userSettings>
