--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -11,7 +11,7 @@
                 <value>username@contoso.onmicrosoft.com</value>
             </setting>
             <setting name="localWorkspace" serializeAs="String">
-                <value>c:\automationworkspace</value>
+                <value />
             </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
