updated module with latest add-on dll

--- a/AzureAutomationAuthoringToolkit/ISEaddon/AzureAutomation.dll.config
+++ b/AzureAutomationAuthoringToolkit/ISEaddon/AzureAutomation.dll.config
@@ -10,7 +10,7 @@
             <setting name="ADUserName" serializeAs="String">
                 <value />
             </setting>
-            <setting name="LocalDirectory" serializeAs="String">
+            <setting name="AccessToken" serializeAs="String">
                 <value />
             </setting>
         </AzureAutomation.Properties.Settings>
