Adding csproj.user file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ AutomationISE/AutomationISE.v12.suo
 AutomationISE/bin/
 AutomationISE/obj/
 AutomationISE/packages/
+AutomationISE/AutomationISE.csproj.user
