Added a class for handling all calls to Azure APIs. The UI's Configuration Tab now relies on this class exclusively. The other tabs will need to be updated to account for this change. I suspect this will involve adjusting some of our models and extending the new class.

--- a/AutomationISE/AutomationISE.csproj
+++ b/AutomationISE/AutomationISE.csproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\AuthenticateHelper.cs" />
+    <Compile Include="Model\AutomationISEClient.cs" />
     <Compile Include="Model\LocalAssets.cs" />
     <Compile Include="Model\AutomationAuthoringItem.cs" />
     <Compile Include="Model\AutomationAsset.cs" />
