The add-on now updates the PowerShell module's configuration to point at the correct workspace, so runbooks use the downloaded asset values. Also fixed a bug or two.

--- a/AutomationISE/AutomationISE.csproj
+++ b/AutomationISE/AutomationISE.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Model\AutomationRunbook.cs" />
     <Compile Include="Model\LocalRunbookStore.cs" />
     <Compile Include="Model\Constants.cs" />
+    <Compile Include="Model\PSModuleConfiguration.cs" />
     <Compile Include="Model\Requires.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
