removing binaries from the ps module. these can be delivered to users in a release.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@ AutomationISE/bin/
 AutomationISE/obj/
 AutomationISE/packages/
 AutomationISE/AutomationISE.csproj.user
+# exclude backup files
 *~
+# exclude binaries from the PS module
+AzureAutomationAuthoringToolkit/ISEaddon/*
+!AzureAutomationAuthoringToolkit/ISEaddon/*.txt
