encryption and decryption support in the emulated automation activities module, and warnings shown when secure assets have null as a value

--- a/AzureAutomationAuthoringToolkit/Config.json
+++ b/AzureAutomationAuthoringToolkit/Config.json
@@ -6,5 +6,9 @@
     {
     	"Name": "SecureLocalAssetsPath",
     	"Value": "default"
+    },
+    {
+    	"Name": "EncryptionCertificateThumbprint",
+    	"Value": "none"
     }
 ]
