--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -13,6 +13,12 @@
             <setting name="localWorkspace" serializeAs="String">
                 <value />
             </setting>
+            <setting name="certFriendlyName" serializeAs="String">
+                <value>Azure Automation ISE Add On</value>
+            </setting>
+            <setting name="certName" serializeAs="String">
+                <value>AzureAutomationISEAddOn</value>
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
