--- a/AutomationISE/AutomationISE.csproj
+++ b/AutomationISE/AutomationISE.csproj
@@ -125,6 +125,7 @@
       <DependentUpon>ChooseNewAssetTypeDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\AutomationSelfSignedCertificate.cs" />
+    <Compile Include="Model\AutomationSourceControl.cs" />
     <Compile Include="Model\Certificate.cs" />
     <Compile Include="NewOrEditVariableDialog.xaml.cs">
       <DependentUpon>NewOrEditVariableDialog.xaml</DependentUpon>
@@ -135,8 +136,8 @@
     <Compile Include="RunbookParamDialog.xaml.cs">
       <DependentUpon>RunbookParamDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TestJobOutputWindow.xaml.cs">
-      <DependentUpon>TestJobOutputWindow.xaml</DependentUpon>
+    <Compile Include="JobOutputWindow.xaml.cs">
+      <DependentUpon>JobOutputWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="AutomationISEControl.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -162,7 +163,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TestJobOutputWindow.xaml">
+    <Page Include="JobOutputWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
