Added a spinning logo to indicate that runbooks are downloading/uploading. Spins clockwise for downloads and anticlockwise for uploads. cleaned up code.

--- a/AutomationISE/AutomationISE.csproj
+++ b/AutomationISE/AutomationISE.csproj
@@ -264,6 +264,15 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\lightning-no-background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\automation-big-gear-no-background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\automation-small-gear-no-background.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
