Removing default entry on login page as this was left over from when we only supported Azure AD login. This should not be required anymore since we support microsoft accounts also.

--- a/AutomationISE/Properties/Settings.settings
+++ b/AutomationISE/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ADUsername" Type="System.String" Scope="User">
-      <Value Profile="(Default)">username@contoso.onmicrosoft.com</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="localWorkspace" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
