--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <AutomationISE.Properties.Settings>
             <setting name="ADUsername" serializeAs="String">
-                <value>username@contoso.onmicrosoft.com</value>
+                <value />
             </setting>
             <setting name="localWorkspace" serializeAs="String">
                 <value />
