Saved my last used subscription and default to that one when I log in.

--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -19,6 +19,9 @@
             <setting name="certName" serializeAs="String">
                 <value>AzureAutomationISEAddOn</value>
             </setting>
+            <setting name="lastSubscription" serializeAs="String">
+                <value />
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
