--- a/AutomationISE/Properties/Settings.settings
+++ b/AutomationISE/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="certName" Type="System.String" Scope="User">
       <Value Profile="(Default)">AzureAutomationISEAddOn</Value>
     </Setting>
+    <Setting Name="lastSubscription" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
