--- a/AutomationISE/packages.config
+++ b/AutomationISE/packages.config
@@ -3,7 +3,7 @@
   <package id="Hyak.Common" version="1.0.2" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Azure.Common" version="2.1.0" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.Azure.Management.Automation" version="0.50.1-prerelease" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Azure.Management.Automation" version="0.50.2-prerelease" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Resources" version="2.18.2-preview" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" userInstalled="true" />
