--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -22,6 +22,9 @@
             <setting name="lastSubscription" serializeAs="String">
                 <value />
             </setting>
+            <setting name="jobRefreshTimeInMilliseconds" serializeAs="String">
+                <value>5000</value>
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
