Adding support for Run As account integration. This will now create a local certificate, add it to the Run As service principal account in AD, and upload the certificate to the automation account. It will also authenticate with the local PowerShell session using the Run As account. Runbooks written using Run As accounts should now work locally.

--- a/AutomationISE/Properties/Settings.settings
+++ b/AutomationISE/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="jobRefreshTimeInMilliseconds" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5000</Value>
     </Setting>
+    <Setting Name="RunAs" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
