--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -25,6 +25,9 @@
             <setting name="jobRefreshTimeInMilliseconds" serializeAs="String">
                 <value>5000</value>
             </setting>
+            <setting name="RunAs" serializeAs="String">
+                <value>True</value>
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
