--- a/AutomationISE/packages.config
+++ b/AutomationISE/packages.config
@@ -3,6 +3,7 @@
   <package id="Hyak.Common" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.Azure.Common" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.Azure.Graph.RBAC" version="3.2.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Automation" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Resources" version="2.20.0-preview" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
@@ -11,6 +12,8 @@
   <package id="Microsoft.CSharp" version="4.0.0-beta-22816" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.16.204221202" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Common" version="1.3.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Common.Dependencies" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management" version="2.0.0" targetFramework="net45" />
@@ -23,7 +26,7 @@
   <package id="Microsoft.WindowsAzure.Management.Sql" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management.Storage" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management.WebSites" version="3.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="System.Dynamic.Runtime" version="4.0.10-beta-22816" targetFramework="net45" />
   <package id="System.IO" version="4.0.10-beta-22816" targetFramework="net45" />
   <package id="System.Linq.Expressions" version="4.0.10-beta-22816" targetFramework="net45" />
