--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -28,6 +28,15 @@
             <setting name="RunAs" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="StorageSubID" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="StorageResourceGroup" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="StorageAccount" serializeAs="String">
+                <value>na</value>
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
