--- a/AutomationISE/packages.config
+++ b/AutomationISE/packages.config
@@ -4,12 +4,17 @@
   <package id="Microsoft.Azure.Common" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Azure.Graph.RBAC" version="3.2.0-preview" targetFramework="net45" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Automation" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Resources" version="2.20.0-preview" targetFramework="net45" />
+  <package id="Microsoft.Azure.Management.Storage" version="6.1.0-preview" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.0.0-beta-22816" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.16.204221202" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.1.0" targetFramework="net45" />
@@ -34,6 +39,8 @@
   <package id="System.Reflection" version="4.0.10-beta-22816" targetFramework="net45" />
   <package id="System.Reflection.Primitives" version="4.0.0-beta-22816" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.20-beta-22816" targetFramework="net45" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
   <package id="System.Text.Encoding" version="4.0.10-beta-22816" targetFramework="net45" />
   <package id="System.Threading.Tasks" version="4.0.10-beta-22816" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="8.0.1" targetFramework="net45" />
 </packages>
