Added a check if the local certificate to encrypt assets is about to expire in less than 30 days and prompt to create a new one. This is not really required as the expired certificate should still work but some organizations might have checks to remove expired certificates. Also fixed an issue related to uploading modules where the storage account is in a different subscription than the one selected.

--- a/AutomationISE/Properties/Settings.settings
+++ b/AutomationISE/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="StorageAccount" Type="System.String" Scope="User">
       <Value Profile="(Default)">na</Value>
     </Setting>
+    <Setting Name="StorageAuthority" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
