--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -37,6 +37,9 @@
             <setting name="StorageAccount" serializeAs="String">
                 <value>na</value>
             </setting>
+            <setting name="StorageAuthority" serializeAs="String">
+                <value />
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
