Some bug fixes. Added support to show Python runbooks to prevent creation of PowerShell ones with the same name. Updated to enable add-on to run outside of PowerShell ISE.

--- a/AutomationISE/Properties/Settings.settings
+++ b/AutomationISE/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="StorageAuthority" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Editor" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
