--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -40,6 +40,9 @@
             <setting name="StorageAuthority" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Editor" serializeAs="String">
+                <value />
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
