--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -43,6 +43,12 @@
             <setting name="Editor" serializeAs="String">
                 <value />
             </setting>
+            <setting name="loginAuthority" serializeAs="String">
+                <value>https://login.microsoftonline.com/</value>
+            </setting>
+            <setting name="appIdURI" serializeAs="String">
+                <value>https://management.core.windows.net/</value>
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
