--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -47,7 +47,7 @@
                 <value>https://login.microsoftonline.com/</value>
             </setting>
             <setting name="appIdURI" serializeAs="String">
-                <value>https://management.core.windows.net/</value>
+                <value>https://management.azure.com/</value>
             </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
