Remember last automation account used and pick this one when add-on starts up again.

--- a/AutomationISE/Properties/Settings.settings
+++ b/AutomationISE/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="appIdURI" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://management.azure.com/</Value>
     </Setting>
+    <Setting Name="lastAutomationAccount" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
