--- a/AutomationISE/app.config
+++ b/AutomationISE/app.config
@@ -49,6 +49,9 @@
             <setting name="appIdURI" serializeAs="String">
                 <value>https://management.azure.com/</value>
             </setting>
+            <setting name="lastAutomationAccount" serializeAs="String">
+                <value />
+            </setting>
         </AutomationISE.Properties.Settings>
     </userSettings>
   <runtime>
